--- a/airportrenovate.client/package.json
+++ b/airportrenovate.client/package.json
@@ -17,8 +17,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
-    "vuetify": "^3.6.4",
-    "vuex": "^4.0.2"
+    "vuetify": "^3.6.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
