--- a/AirportRenovate.Server/appsettings.json
+++ b/AirportRenovate.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Money": "Data Source=Lanvander\\SQLEXPRESS; Initial Catalog=Airport_new; Persist Security Info=True; User ID=sa; Password=Test1234; TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
