--- a/airportrenovate.client/package.json
+++ b/airportrenovate.client/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
+    "vue3-cookies": "^1.0.6",
     "vuetify": "^3.6.6"
   },
   "devDependencies": {
