fix:MoneyDb, API

--- a/AirportRenovate.Server/appsettings.json
+++ b/AirportRenovate.Server/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Money": "Data Source=Lanvander\\SQLEXPRESS; Initial Catalog=Airport_new; Persist Security Info=True; User ID=sa; Password=Test1234; TrustServerCertificate=True;"
+    "Money": "Data Source=Thinfu0123\\SQLEXPRESS; Initial Catalog=Airport_new; Persist Security Info=True; User ID=sa; Password=Test1234; TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
