feat:添加 jwt驗證,數字格式化,軟刪除查詢功能 fix:Detail表格驗證,文字按鈕超連結樣式,ViewModel

--- a/AirportRenovate.Server/appsettings.json
+++ b/AirportRenovate.Server/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "Money": "Data Source=Thinfu0123\\SQLEXPRESS; Initial Catalog=Airport_new; Persist Security Info=True; User ID=sa; Password=Test1234; TrustServerCertificate=True;"
   },
+  "JwtSettings": {
+    "Issuer": "Airport",
+    "Audience": "AirportRenovate",
+    "SecretKey": "Qy2RmzIfwTdMb0Q1s8uWvEhOcKjL3pNx"
+  },
   "AllowedHosts": "*"
 }
